# eoss_observe

./: README.md  pyproject.toml
eoss_observe/: global.ipynb  main.ipynb
